feat(backend): add SQLite support, Flyway migrations, and role-based security
- Add sqlite-jdbc and hibernate-community-dialects for SQLite runtime support
- Add Flyway dependencies for database migration management
- Configure RoleHierarchy (ADMIN > OFFICER > MEMBER > GRADE_REP) and enable @EnableMethodSecurity
- Permit public access to /api/events/public and /api/photos endpoints
- Improve PowerShell test script output prefix formatting